# robot_vacuum_ws

./: .gitignore  Dockerfile  README.md  markdown
scripts/: install_dependencies.sh  setup_ssh.sh
src/robot_vacuum/: CMakeLists.txt  package.xml
src/robot_vacuum/config/: camera_info.yaml  odrive_params.yaml  usb_cam.yaml  usb_mapping.yaml  velodyne_params.yaml
src/robot_vacuum/launch/: robot_bringup.launch.py
src/robot_vacuum/nodes/: dummy_sensor.py
