<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_vacuum</name>
  <version>0.0.0</version>
  <description>Robot vacuum control package for ROS 2 Humble</description>
  <maintainer email="alina@robot.ru">Alina</maintainer>
  <license>Apache License 2.0</license>

  <!-- Базовый buildtool для ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Позволяет устанавливать Python-модули в пакете с CMake -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Зависимости от пакетов ROS -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Зависимости от драйверов, если нужны на этапе сборки/запуска -->
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
